Design fix: add margin top to beast on mobile & tablet

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -54,6 +54,12 @@ $svgSprite: '../images/sprite.svg';
 	background: #fff;
 }
 
+.beast-wrapper {
+	@include mq(upto, large) {
+		margin: 1em auto auto;
+	}
+}
+
 body {
 	margin: 0;
 	background:#000;
